--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "http-status-codes": "^2.2.0",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20"
